<resources>
    <string name="app_name">Expenser</string>
    <string name="app_about">Developed by Daniel Yehun Kim\nwww.danielkim.xyz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit">Edit</string>
    <string name="action_add_new_category_pm">Add</string>

    <!-- Nav -->
    <string name="nav_overview">Overview</string>
    <string name="nav_history">History</string>
    <string name="nav_charts">Charts</string>
    <string name="nav_export">Export</string>

    <!-- Common -->
    <string name="currency">$</string>
    <string name="currency_amount">%1$s%2$s</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Expense -->
    <string name="expense_note">Note</string>
    <string name="expense_date">Date</string>
    <string name="expense_payment_method">Payment Method</string>
    <string name="expense_category">Category</string>
    <string name="none">None</string>

    <!-- Add Expense Fragment-->
    <string name="snackbar_input_amount">Please specify the expense amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="default_date">Today</string>
    <string name="add_note_hint">Add Note</string>
    <string name="okay">Okay</string>
    <string name="num9">9</string>
    <string name="num8">8</string>
    <string name="num7">7</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="num4">4</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num0">0</string>
    <string name="dot">.</string>

    <!-- History Filter Fragment -->
    <string name="total_transactions">Total Transactions: %d</string>

    <!-- Charts Fragment -->
    <string name="chart_no_data">No expense data available</string>
    <string name="chart_total">Total</string>

    <!-- Edit Expense -->
    <string name="toolbar_edit_expense_title">Edit Expense</string>
    <string name="dialog_discard_title">Discard changes?</string>
    <string name="edit_expense_save">Save Changes</string>
    <string name="edit_expense_discard">Discard</string>
    <string name="toast_saved_changes">Saved changes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Expense Options -->
    <string name="delete_expense">Delete</string>
    <string name="edit_expense">Edit</string>
    <string name="dialog_options_title">Options</string>
    <string name="snackbar_expense_deleted">Transaction deleted</string>

    <!-- Edit/Delete Category and PM -->
    <string name="snackbar_category_deleted">Category \'%s\' deleted</string>
    <string name="snackbar_pm_deleted">Payment Method \'%s\' deleted</string>
    <string name="add_edit_category_name">Category Name</string>
    <string name="add_edit_pm_name">Payment Method Name</string>
    <string name="dialog_add_category_title">Add New Category</string>
    <string name="dialog_edit_category_title">Edit Category</string>
    <string name="dialog_add_pm_title">Add New Payment Method</string>
    <string name="dialog_edit_pm_title">Edit Payment Method</string>

    <!-- Preferences -->
    <string name="pref_budget_title">Budget</string>
    <string name="pref_budget_desc">Your current monthly budget is %1$s%2$s</string>
    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_desc">You current currency is \'%s\'</string>
    <string name="pref_add_category_title">Categories</string>
    <string name="pref_add_category_desc">Add and edit your expense categories</string>
    <string name="pref_add_payment_method_title">Payment Methods</string>
    <string name="pref_add_payment_method_desc">Add and edit your payment methods</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>
    <string name="pref_dialog_positive_ok">OK</string>

    <!-- Nav Greetings -->
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
</resources>
