<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_overview_black_24dp"
            android:title="@string/nav_overview" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_clock_black_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_chart_black_24dp"
            android:title="@string/nav_charts" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_export_black_24dp"
            android:title="@string/nav_export" />
    </group>
</menu>
