<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".Activities.AddExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/add_expense_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_clear_white_24dp"
                    style="?android:borderlessButtonStyle"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:theme="@style/ScrollViewGrayEdgeTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:animateLayoutChanges="true"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/add_expense_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:layout_margin="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/add_expense_body"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray"/>

                        <Button
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:id="@+id/btn_add_expense_done"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_expense"
                            android:fontFamily="sans-serif-medium"
                            android:layout_gravity="bottom|end"
                            android:visibility="visible"/>

                        <LinearLayout
                            android:id="@+id/edit_expense_button_container"
                            android:orientation="horizontal"
                            android:gravity="end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">
                                <Button
                                    android:id="@+id/btn_edit_expense_discard"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/edit_expense_discard"
                                    android:fontFamily="sans-serif-medium"/>
                                <Button
                                    android:id="@+id/btn_edit_expense_save"
                                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/edit_expense_save"
                                    android:fontFamily="sans-serif-medium"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>